# django-droppablefileinput

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
droppablefileinput/: widgets.py
droppablefileinput/static/droppablefileinput/css/: droppable_file_input.css
droppablefileinput/static/droppablefileinput/js/: droppable_file_input.js
droppablefileinput/templates/widgets/: droppable_file_input.html
example/: views.py
tests/: test_widgets.py
